Removed visibility:hidden from the elfinder dialog classes, fixes #23

--- a/application/static/css/scribeui.css
+++ b/application/static/css/scribeui.css
@@ -105,10 +105,6 @@ a{
 }
 
 /*=== Elfinder ===*/
-.elfinder-dialog {
-    visibility: hidden !important;
-}
-
 .elfinder-toolbar {
     border-radius: 0px !important;
 }
